# pyright-multilspy-demo

./: .gitignore  LICENSE  README.md  pyproject.toml
demo_pyright/: __main__.py
demo_pyright/pyright_server/: __init__.py  initialize_params.json
lsp_demo/: demo_dual.py  demo_pyright.py
pyright_server/: __init__.py  logger.py  server.py
testRoot/: demo1.py  demo2.py
tools/: init_pyright.py
