[project]
name = "pyright-multilspy-demo"
version = "0.1.0"
description = "A demonstration of using pyright language server with multilspy"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "multilspy>=0.0.15",
    "rich>=14.0.0",
    "richuru>=0.1.1",
]

[tool.uv]
override-dependencies = [
    "jedi-language-server==0.45.0",
]
